# razermapper

./: .gitignore  99-razermapper.rules  Cargo.toml  PKGBUILD  README.md  build-package.sh  config.yaml.example  razermapper.desktop  razermapper.install  razermapperd.service
razermapper-common/: Cargo.toml
razermapper-common/src/: ipc_client.rs  lib.rs
razermapper-gui/: Cargo.toml
razermapper-gui/src/: gui.rs  ipc.rs  lib.rs  main.rs
razermapper-gui/tests/: gui_sanity.rs
razermapperd/: Cargo.toml
razermapperd/config/: default.yaml
razermapperd/src/: config.rs  device.rs  injector.rs  ipc.rs  lib.rs  macro_engine.rs  main.rs  security.rs
razermapperd/systemd/: razermapperd.service
tests/: Cargo.toml  e2e.rs
