[package]
name = "razermapper-common"
version = "0.2.0"
edition = "2021"
description = "Shared types and IPC protocol for razermapper"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
